# Logic-RL

./: .gitignore  .gitmodules  README.md  USAGE_EXAMPLES.md  analyze_zebra_tokens.py  eval_zebra.py  evol_n2_m2_2x2.sh  main_grpo_zebra.sh  mix_levels.py  prepare_data.py  requirements.md  requirements.txt  train_3ppl.sbatch  train_3ppl_step_400.sh  train_5ppl_srun.sh  train_6ppl.sh  train_curriculum_zebra.sh  train_curriculum_zebra_v2.sh  train_mix.sh  train_mix_2.sh  train_mix_3.sh  train_mix_4.sh  train_mix_raw.sh  train_n2_m2_2x2.sh  train_n2_m3_2x3.sh  upload_to_hf.py
data/loong/zebra_levels/: data_split.py  todo.md
data/loong/zebra_raw/: test.parquet  train.parquet
data/loong/zebra_raw_levels/: levels_summary.json
datagen/: README.md  evol_zebra_complete.py  pyproject.toml
datagen/results/: evol_zebra_50_summary.json  evol_zebra_complete.json
datagen/src/: evol_zebra_puzzles.py  main.py  run_evol.py  simple_test.py  test_evol.py
eval_kk/: eval.sh  main_eval_instruct.py
eval_zebra_results/actor/global_step_250/: results_zebra_n3_m3_token8192.json
eval_zebra_results/actor/global_step_300/: results_zebra_n2_m2_token8192.json
examples/data_preprocess/: evol_zebra_level.py  zebra.py  zebra_puzzle.py  zebra_raw.py  zebra_raw_levels.py
loong_data_separated/: ar_lsat_github.json  zebra_puzzle_wikipedia.json
train_scripts/: train_3ppl.sh  train_3ppl_step_400.sbatch  train_5ppl.sbatch  train_5ppl.sh  train_mix_2.sh  train_mix_5.sh  train_mix_raw_2.sh  train_mix_raw_3.sh
verl/trainer/: main_eval.py  main_ppo.py
verl/utils/reward_score/: logic.py  (+1 more)
(+57 files in other folders)
